		Thanks to Rob Alexander <rob.alexander@york.ac.uk> and the "Software Measurement 
		and Testing 2013" class at University of York.
	DenseGrid[2|3]D documentation error did not mae it clear that moveObject would
		set an object location if it wasn't already in the grid.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	Error in AbstractGrid3D and subclasses: all moore/max and hamiltonian/vonneumann
		lookup methods would ignore the origin in non-toroidal cases regardless
		of whether or not the user requested this feature.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	DoubleGrid[2|3]D.truncate was not modifying the grid
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	DoubleGrid[2|3]D and IntGrid[2|3]D add and multiple methods didn't have sufficient
		safeguards against multiplying or adding against other grids of different
		dimensions.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	Documentation improved to make it clear that repeated-scheduled Steppables would
		simply terminate if their intervals eventually pushed them to beyond
		AFTER_SIMULATION.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	The -help flag in doLoop text modified to make it clear that the simulation would
		end when either -time or -until was completed even if the other one was not.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	SimpleInspector could reschedule itself even after the simulation had ended in
		unusual situations, resulting in an unexpected spurious but otherwise
		relatively harmless exception.  Thanks to Joey Harrison <jharri1@gmu.edu>
	Improvements to pie charting and bar charting facilities to allow tracking of
		Collections and also to set up BarChartingPropertyInspector as a subclass
		of PieChartChartingPropertyInspector.